--- a/README.me
+++ b/README.me
@@ -6,10 +6,15 @@ This is the front-end and back-end for Project 6 of the Junior Web Developer pat
 
 Clone this repository
 in the terminal make a cd dwj-project6 
+then do a npm install
 then do a npm run start.
 wait for ng serve to launch
 it can be long sometimes.
 open a new terminal 
 make a cd backend
-then do a npm run start.
+then do a npm install
+then add folder name "images"
+then do a npm run start
 in your browser type localhost:4200
+add your own hot sauce.
+
