adding new packages and changing the readme

--- a/README.me
+++ b/README.me
@@ -2,7 +2,15 @@
 
 This is the front-end and back-end for Project 6 of the Junior Web Developer path.
 
-## Installation
+## Api security in compliance with RGPD and OWASP
+.Broken authentication and session management. I use (password-validator ,Bcrypt and jsonwebtoken packages)
+.Scripts XSS (Cross-Site Scripting). I use (express-mongo-sanitize)
+.Broken access control. 2 types of database administrator rights must be defined: 
+ Access to delete or modify tables, and access to edit the contents of the database
+.Exposure of sensitive data. I use (dotenv and maskdata)
+.(Helmet) helps me to secure the Express application by defining various HTTP headers
+
+### Installation
 
 Clone this repository
 in the terminal make a cd dwj-project6 
